Add italics for scientific names

--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -1,5 +1,5 @@
 @article{park2013dtulp,
-  title={dTULP, the Drosophila melanogaster homolog of tubby, regulates transient receptor potential channel localization in cilia},
+  title={dTULP, the \textit{Drosophila melanogaster} homolog of tubby, regulates transient receptor potential channel localization in cilia},
   author={Park, Jina and Lee, Jeongmi and Shim, Jaewon and Han, Woongsu and Lee, Jinu and Bae, Yong Chul and Chung, Yun Doo and Kim, Chul Hoon and Moon, Seok Jun},
   journal={PLoS genetics},
   volume={9},
@@ -243,7 +243,7 @@
 }
 
 @article{desroches2010quantitative,
-  title={Quantitative trait locus mapping of gravitaxis behaviour in Drosophila melanogaster},
+  title={Quantitative trait locus mapping of gravitaxis behaviour in \textit{Drosophila melanogaster}},
   author={Desroches, Christie E and Busto, Macarena and Riedl, Craig AL and Mackay, Trudy FC and Sokolowski, Marla B},
   journal={Genetics research},
   volume={92},
@@ -830,7 +830,7 @@
 }
 
 @article{serwas2017centrioles,
-  title={Centrioles initiate cilia assembly but are dispensable for maturation and maintenance in C. elegans},
+  title={Centrioles initiate cilia assembly but are dispensable for maturation and maintenance in \textit{C. elegans}},
   author={Serwas, Daniel and Su, Tiffany Y and Roessler, Max and Wang, Shaohe and Dammermann, Alexander},
   journal={J Cell Biol},
   volume={216},
@@ -949,7 +949,7 @@
 }
 
 @article{cenci1994chromatin,
-  title={Chromatin and microtubule organization during premeiotic, meiotic and early postmeiotic stages of Drosophila melanogaster spermatogenesis},
+  title={Chromatin and microtubule organization during premeiotic, meiotic and early postmeiotic stages of \textit{Drosophila melanogaster} spermatogenesis},
   author={Cenci, Giovanni and Bonaccorsi, Silvia and Pisano, Claudio and Verni, Fiammetta and Gatti, Maurizio},
   journal={Journal of Cell Science},
   volume={107},
