Fix journal name capitalization and add new entries

--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -1,7 +1,7 @@
 @article{park2013dtulp,
   title={dTULP, the \textit{Drosophila melanogaster} homolog of tubby, regulates transient receptor potential channel localization in cilia},
   author={Park, Jina and Lee, Jeongmi and Shim, Jaewon and Han, Woongsu and Lee, Jinu and Bae, Yong Chul and Chung, Yun Doo and Kim, Chul Hoon and Moon, Seok Jun},
-  journal={PLoS genetics},
+  journal={PLoS Genetics},
   volume={9},
   number={9},
   pages={e1003814},
@@ -12,7 +12,7 @@
 @article{park2015ciliary,
   title={Ciliary phosphoinositide regulates ciliary protein trafficking in Drosophila},
   author={Park, Jina and Lee, Nayoung and Kavoussi, Adriana and Seo, Jeong Taeg and Kim, Chul Hoon and Moon, Seok Jun},
-  journal={Cell reports},
+  journal={Cell Reports},
   volume={13},
   number={12},
   pages={2808--2816},
@@ -34,7 +34,7 @@
 @article{xu2016phosphatidylinositol,
   title={Phosphatidylinositol phosphate kinase PIPKI [gamma] and phosphatase INPP5E coordinate initiation of ciliogenesis},
   author={Xu, Qingwen and Zhang, Yuxia and Wei, Qing and Huang, Yan and Hu, Jinghua and Ling, Kun},
-  journal={Nature communications},
+  journal={Nature Communications},
   volume={7},
   year={2016},
   publisher={Nature Publishing Group}
@@ -43,7 +43,7 @@
 @article{slaats2015mks1,
   title={MKS1 regulates ciliary INPP5E levels in Joubert syndrome},
   author={Slaats, Gisela G and Isabella, Christine R and Kroes, Hester Y and Dempsey, Jennifer C and Gremmels, Hendrik and Monroe, Glen R and Phelps, Ian G and Duran, Karen J and Adkins, Jonathan and Kumar, Sairam A and others},
-  journal={Journal of medical genetics},
+  journal={Journal of Medical Genetics},
   pages={jmedgenet--2015},
   year={2015},
   publisher={BMJ Publishing Group Ltd}
@@ -52,7 +52,7 @@
 @article{garcia2015phosphoinositides,
   title={Phosphoinositides regulate ciliary protein trafficking to modulate hedgehog signaling},
   author={Garcia-Gonzalo, Francesc R and Phua, Siew Cheng and Roberson, Elle C and Garcia, Galo and Abedin, Monika and Schurmans, St{\'e}phane and Inoue, Takanari and Reiter, Jeremy F},
-  journal={Developmental cell},
+  journal={Developmental Cell},
   volume={34},
   number={4},
   pages={400--409},
@@ -63,7 +63,7 @@
 @article{nakatsu2015phosphoinositide,
   title={A phosphoinositide code for primary cilia},
   author={Nakatsu, Fubito},
-  journal={Developmental cell},
+  journal={Developmental Cell},
   volume={34},
   number={4},
   pages={379--380},
@@ -71,16 +71,6 @@
   publisher={Elsevier}
 }
 
-@article{chavez2015modulation,
-  title={Modulation of ciliary phosphoinositide content regulates trafficking and sonic hedgehog signaling output},
-  author={Ch{\'a}vez, Marcelo and Ena, Sabrina and Van Sande, Jacqueline and de Kerchove d’Exaerde, Alban and Schurmans, St{\'e}phane and Schiffmann, Serge N},
-  journal={Developmental cell},
-  volume={34},
-  number={3},
-  pages={338--350},
-  year={2015},
-  publisher={Elsevier}
-}
 
 @article{avidor2015shared,
   title={Shared and distinct mechanisms of compartmentalized and cytosolic ciliogenesis},
@@ -138,7 +128,7 @@
 @article{fabian2010phosphatidylinositol,
   title={Phosphatidylinositol 4, 5-bisphosphate directs spermatid cell polarity and exocyst localization in Drosophila},
   author={Fabian, Lacramioara and Wei, Ho-Chun and Rollins, Janet and Noguchi, Tatsuhiko and Blankenship, J Todd and Bellamkonda, Kishan and Polevoy, Gordon and Gervais, Louis and Guichet, Antoine and Fuller, Margaret T and others},
-  journal={Molecular biology of the cell},
+  journal={Molecular Biology of the Cell},
   volume={21},
   number={9},
   pages={1546--1555},
@@ -149,7 +139,7 @@
 @article{wei2008depletion,
   title={Depletion of plasma membrane PtdIns (4, 5) P2 reveals essential roles for phosphoinositides in flagellar biogenesis},
   author={Wei, Ho-Chun and Rollins, Janet and Fabian, Lacramioara and Hayes, Madeline and Polevoy, Gordon and Bazinet, Christopher and Brill, Julie A},
-  journal={Journal of cell science},
+  journal={Journal of Cell Science},
   volume={121},
   number={7},
   pages={1076--1084},
@@ -204,7 +194,7 @@
 @article{raghu2009rhabdomere,
   title={Rhabdomere biogenesis in Drosophila photoreceptors is acutely sensitive to phosphatidic acid levels},
   author={Raghu, Padinjat and Coessens, Elise and Manifava, Maria and Georgiev, Plamen and Pettitt, Trevor and Wood, Eleanor and Garcia-Murillas, Isaac and Okkenhaug, Hanneke and Trivedi, Deepti and Zhang, Qifeng and others},
-  journal={The Journal of cell biology},
+  journal={The Journal of Cell Biology},
   volume={185},
   number={1},
   pages={129--145},
@@ -234,7 +224,7 @@
 @article{schneider2012nih,
   title={NIH Image to ImageJ: 25 years of image analysis},
   author={Schneider, Caroline A and Rasband, Wayne S and Eliceiri, Kevin W},
-  journal={Nature methods},
+  journal={Nature Methods},
   volume={9},
   number={7},
   pages={671--675},
@@ -245,7 +235,7 @@
 @article{desroches2010quantitative,
   title={Quantitative trait locus mapping of gravitaxis behaviour in \textit{Drosophila melanogaster}},
   author={Desroches, Christie E and Busto, Macarena and Riedl, Craig AL and Mackay, Trudy FC and Sokolowski, Marla B},
-  journal={Genetics research},
+  journal={Genetics Research},
   volume={92},
   number={3},
   pages={167--174},
@@ -267,7 +257,7 @@
 @article{cachero2011gene,
   title={The gene regulatory cascade linking proneural specification with differentiation in Drosophila sensory neurons},
   author={Cachero, Sebasti{\'a}n and Simpson, T Ian and zur Lage, Petra I and Ma, Lina and Newton, Fay G and Holohan, Eimear E and Armstrong, J Douglas and Jarman, Andrew P},
-  journal={PLoS biology},
+  journal={PLoS Biology},
   volume={9},
   number={1},
   pages={e1000568},
@@ -298,7 +288,7 @@
 @article{dixon2012exome,
   title={Exome sequencing can improve diagnosis and alter patient management},
   author={Dixon-Salazar, Tracy J and Silhavy, Jennifer L and Udpa, Nitin and Schroth, Jana and Bielas, Stephanie and Schaffer, Ashleigh E and Olvera, Jesus and Bafna, Vineet and Zaki, Maha S and Abdel-Salam, Ghada H and others},
-  journal={Science translational medicine},
+  journal={Science Translational Medicine},
   volume={4},
   number={138},
   pages={138ra78--138ra78},
@@ -402,7 +392,7 @@
 @article{mukhopadhyay2010tulp3,
   title={TULP3 bridges the IFT-A complex and membrane phosphoinositides to promote trafficking of G protein-coupled receptors into primary cilia},
   author={Mukhopadhyay, Saikat and Wen, Xiaohui and Chih, Ben and Nelson, Christopher D and Lane, William S and Scales, Suzie J and Jackson, Peter K},
-  journal={Genes \& development},
+  journal={Genes \& Development},
   volume={24},
   number={19},
   pages={2180--2193},
@@ -432,7 +422,7 @@
 @article{yang2015superresolution,
   title={Superresolution pattern recognition reveals the architectural map of the ciliary transition zone},
   author={Yang, T Tony and Su, Jimmy and Wang, Won-Jing and Craige, Branch and Witman, George B and Tsou, Meng-Fu Bryan and Liao, Jung-Chi},
-  journal={Scientific reports},
+  journal={Scientific Reports},
   volume={5},
   pages={14096},
   year={2015},
@@ -442,7 +432,7 @@
 @article{giansanti2015exocyst,
   title={Exocyst-dependent membrane addition is required for anaphase cell elongation and cytokinesis in Drosophila},
   author={Giansanti, Maria Grazia and Vanderleest, Timothy E and Jewett, Cayla E and Sechi, Stefano and Frappaolo, Anna and Fabian, Lacramioara and Robinett, Carmen C and Brill, Julie A and Loerke, Dinah and Fuller, Margaret T and others},
-  journal={PLoS genetics},
+  journal={PLoS Genetics},
   volume={11},
   number={11},
   pages={e1005632},
@@ -464,7 +454,7 @@
 @article{liebl2005increased,
   title={Increased synaptic microtubules and altered synapse development in Drosophila sec8 mutants},
   author={Liebl, Faith LW and Chen, Kaiyun and Karr, Julie and Sheng, Qi and Featherstone, David E},
-  journal={BMC biology},
+  journal={BMC Biology},
   volume={3},
   number={1},
   pages={27},
@@ -475,7 +465,7 @@
 @article{murthy2005sec6,
   title={Sec6 mutations and the Drosophila exocyst complex},
   author={Murthy, Mala and Ranjan, Ravi and Denef, Natalie and Higashi, Misao EL and Schupbach, Trudi and Schwarz, Thomas L},
-  journal={Journal of cell science},
+  journal={Journal of Cell Science},
   volume={118},
   number={6},
   pages={1139--1150},
@@ -486,7 +476,7 @@
 @article{reiter2012base,
   title={The base of the cilium: roles for transition fibres and the transition zone in ciliary formation, maintenance and compartmentalization},
   author={Reiter, Jeremy F and Blacque, Oliver E and Leroux, Michel R},
-  journal={EMBO reports},
+  journal={EMBO Reports},
   volume={13},
   number={7},
   pages={608--618},
@@ -497,7 +487,7 @@
 @article{williams2011mks,
   title={MKS and NPHP modules cooperate to establish basal body/transition zone membrane associations and ciliary gate function during ciliogenesis},
   author={Williams, Corey L and Li, Chunmei and Kida, Katarzyna and Inglis, Peter N and Mohan, Swetha and Semenec, Lucie and Bialas, Nathan J and Stupay, Rachel M and Chen, Nansheng and Blacque, Oliver E and others},
-  journal={The Journal of cell biology},
+  journal={The Journal of Cell Biology},
   volume={192},
   number={6},
   pages={1023--1041},
@@ -508,7 +498,7 @@
 @article{riparbelli2013unique,
   title={Unique properties of Drosophila spermatocyte primary cilia},
   author={Riparbelli, Maria Giovanna and Cabrera, Oscar A and Callaini, Giuliano and Megraw, Timothy L},
-  journal={Biology open},
+  journal={Biology Open},
   volume={2},
   number={11},
   pages={1137--1147},
@@ -530,7 +520,7 @@
 @article{mottier2009drosophila,
   title={Drosophila bld10 is a centriolar protein that regulates centriole, basal body, and motile cilium assembly},
   author={Mottier-Pavie, Violaine and Megraw, Timothy L},
-  journal={Molecular biology of the cell},
+  journal={Molecular Biology of the Cell},
   volume={20},
   number={10},
   pages={2605--2614},
@@ -563,7 +553,7 @@
 @article{zuo2009exocyst,
   title={The exocyst protein Sec10 is necessary for primary ciliogenesis and cystogenesis in vitro},
   author={Zuo, Xiaofeng and Guo, Wei and Lipschutz, Joshua H},
-  journal={Molecular biology of the cell},
+  journal={Molecular Biology of the Cell},
   volume={20},
   number={10},
   pages={2522--2529},
@@ -574,19 +564,12 @@
 @article{seixas2016arl13b,
   title={Arl13b and the exocyst interact synergistically in ciliogenesis},
   author={Seixas, Cec{\'\i}lia and Choi, Soo Young and Polgar, Noemi and Umberger, Nicole L and East, Michael P and Zuo, Xiaofeng and Moreiras, Hugo and Ghossoub, Rania and Benmerah, Alexandre and Kahn, Richard A and others},
-  journal={Molecular biology of the cell},
+  journal={Molecular Biology of the Cell},
   volume={27},
   number={2},
   pages={308--320},
   year={2016},
   publisher={Am Soc Cell Biol}
-}
-
-@article{conduit2017compartmentalized,
-  title={A compartmentalized phosphoinositide signaling axis at cilia is regulated by INPP5E to maintain cilia and promote Sonic Hedgehog medulloblastoma.},
-  author={Conduit, SE and Ramaswamy, V and Remke, M and Watkins, DN and Wainwright, BJ and Taylor, MD and Mitchell, CA and Dyson, JM},
-  journal={Oncogene},
-  year={2017}
 }
 
 @article{dyson2017inpp5e,
@@ -614,7 +597,7 @@
 @article{chih2012ciliopathy,
   title={A ciliopathy complex at the transition zone protects the cilia as a privileged membrane domain},
   author={Chih, Ben and Liu, Peter and Chinn, Yvonne and Chalouni, Cecile and Komuves, Laszlo G and Hass, Philip E and Sandoval, Wendy and Peterson, Andrew S},
-  journal={Nature cell biology},
+  journal={Nature Cell Biology},
   volume={14},
   number={1},
   pages={61},
@@ -712,7 +695,7 @@
 @article{riparbelli2012assembly,
   title={Assembly and persistence of primary cilia in dividing Drosophila spermatocytes},
   author={Riparbelli, Maria Giovanna and Callaini, Giuliano and Megraw, Timothy L},
-  journal={Developmental cell},
+  journal={Developmental Cell},
   volume={23},
   number={2},
   pages={425--432},
@@ -756,7 +739,7 @@
 @article{balla2013phosphoinositides,
   title={Phosphoinositides: tiny lipids with giant impact on cell regulation},
   author={Balla, Tamas},
-  journal={Physiological reviews},
+  journal={Physiological Reviews},
   volume={93},
   number={3},
   pages={1019--1137},
@@ -767,7 +750,7 @@
 @article{hasegawa2012phosphatidylinositol,
   title={Phosphatidylinositol 4-phosphate 5-kinase is indispensable for mouse spermatogenesis},
   author={Hasegawa, Hiroshi and Noguchi, Junko and Yamashita, Misuzu and Okada, Risa and Sugimoto, Rika and Furuya, Momoko and Unoki, Takamitsu and Funakoshi, Yuji and Baba, Tadashi and Kanaho, Yasunori},
-  journal={Biology of reproduction},
+  journal={Biology of Reproduction},
   volume={86},
   number={5},
   year={2012},
@@ -824,7 +807,7 @@
   journal={Cilia},
   volume={4},
   number={1},
-  pages={P26},
+  pages={(Supplement 1) P26},
   year={2015},
   publisher={BioMed Central}
 }
@@ -854,7 +837,7 @@
 @article{zhou2001salmonella,
   title={A Salmonella inositol polyphosphatase acts in conjunction with other bacterial effectors to promote host cell actin cytoskeleton rearrangements and bacterial internalization},
   author={Zhou, Daoguo and Chen, Li-Mei and Hernandez, Lorraine and Shears, Stephen B and Gal{\'a}n, Jorge E},
-  journal={Molecular microbiology},
+  journal={Molecular Microbiology},
   volume={39},
   number={2},
   pages={248--260},
@@ -865,7 +848,7 @@
 @article{terebiznik2002elimination,
   title={Elimination of host cell PtdIns (4, 5) P 2 by bacterial SigD promotes membrane fission during invasion by Salmonella},
   author={Terebiznik, Mauricio R and Vieira, Otilia V and Marcus, Sandra L and Slade, Andrea and Yip, Christopher M and Trimble, William S and Meyer, Tobias and Finlay, B Brett and Grinstein, Sergio},
-  journal={Nature cell biology},
+  journal={Nature Cell Biology},
   volume={4},
   number={10},
   pages={766},
@@ -887,7 +870,7 @@
 @article{wong2005pip2,
   title={PIP2 hydrolysis and calcium release are required for cytokinesis in Drosophila spermatocytes},
   author={Wong, Raymond and Hadjiyanni, Irene and Wei, Ho-Chun and Polevoy, Gordon and McBride, Rachel and Sem, Kai-Ping and Brill, Julie A},
-  journal={Current biology},
+  journal={Current Biology},
   volume={15},
   number={15},
   pages={1401--1406},
@@ -898,7 +881,7 @@
 @article{zaghloul2010functional,
   title={Functional modules, mutational load and human genetic disease},
   author={Zaghloul, Norann A and Katsanis, Nicholas},
-  journal={Trends in genetics},
+  journal={Trends in Genetics},
   volume={26},
   number={4},
   pages={168--176},
@@ -920,7 +903,7 @@
 @article{zhang2008membrane,
   title={Membrane association and functional regulation of Sec3 by phospholipids and Cdc42},
   author={Zhang, Xiaoyu and Orlando, Kelly and He, Bing and Xi, Fengong and Zhang, Jian and Zajac, Allison and Guo, Wei},
-  journal={The Journal of cell biology},
+  journal={The Journal of Cell Biology},
   volume={180},
   number={1},
   pages={145--158},
@@ -963,7 +946,7 @@
 @article{khanna2009common,
   title={A common allele in RPGRIP1L is a modifier of retinal degeneration in ciliopathies},
   author={Khanna, Hemant and Davis, Erica E and Murga-Zamalloa, Carlos A and Estrada-Cuzcano, Alejandro and Lopez, Irma and den Hollander, Anneke I and Zonneveld, Marijke N and Othman, Mohammad I and Waseem, Naushin and Chakarova, Christina F and others},
-  journal={Nature genetics},
+  journal={Nature Genetics},
   volume={41},
   number={6},
   pages={739},
@@ -974,7 +957,7 @@
 @article{leitch2008hypomorphic,
   title={Hypomorphic mutations in syndromic encephalocele genes are associated with Bardet-Biedl syndrome},
   author={Leitch, Carmen C and Zaghloul, Norann A and Davis, Erica E and Stoetzel, Corinne and Diaz-Font, Anna and Rix, Suzanne and Alfadhel, Majid and Lewis, Richard Alan and Eyaid, Wafaa and Banin, Eyal and others},
-  journal={Nature genetics},
+  journal={Nature Genetics},
   volume={40},
   number={4},
   pages={443},
@@ -985,7 +968,7 @@
 @article{shimada2017vitro,
   title={In vitro modeling using ciliopathy-patient-derived cells reveals distinct cilia dysfunctions caused by CEP290 mutations},
   author={Shimada, Hiroko and Lu, Quanlong and Insinna-Kettenhofen, Christine and Nagashima, Kunio and English, Milton A and Semler, Elizabeth M and Mahgerefteh, Jacklyn and Cideciyan, Artur V and Li, Tiansen and Brooks, Brian P and others},
-  journal={Cell reports},
+  journal={Cell Reports},
   volume={20},
   number={2},
   pages={384--396},
@@ -996,7 +979,7 @@
 @article{stowe2012centriolar,
   title={The centriolar satellite proteins Cep72 and Cep290 interact and are required for recruitment of BBS proteins to the cilium},
   author={Stowe, Timothy R and Wilkinson, Christopher J and Iqbal, Anila and Stearns, Tim},
-  journal={Molecular biology of the cell},
+  journal={Molecular Biology of the Cell},
   volume={23},
   number={17},
   pages={3322--3335},
@@ -1013,4 +996,59 @@
   pages={714},
   year={2010},
   publisher={Nature Publishing Group}
+}
+
+@article{brooks2014multiciliated,
+  title={Multiciliated cells},
+  author={Brooks, Eric R and Wallingford, John B},
+  journal={Current Biology},
+  volume={24},
+  number={19},
+  pages={R973--R982},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{marshall2006cilia,
+  title={Cilia: tuning in to the cell's antenna},
+  author={Marshall, Wallace F and Nonaka, Shigenori},
+  journal={Current Biology},
+  volume={16},
+  number={15},
+  pages={R604--R614},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{chavez2015modulation,
+  title={Modulation of ciliary phosphoinositide content regulates trafficking and sonic hedgehog signaling output},
+  author={Ch{\'a}vez, Marcelo and Ena, Sabrina and Van Sande, Jacqueline and de Kerchove d’Exaerde, Alban and Schurmans, St{\'e}phane and Schiffmann, Serge N},
+  journal={Developmental Cell},
+  volume={34},
+  number={3},
+  pages={338--350},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{conduit2017compartmentalized,
+  title={A compartmentalized phosphoinositide signaling axis at cilia is regulated by INPP5E to maintain cilia and promote Sonic Hedgehog medulloblastoma},
+  author={Conduit, SE and Ramaswamy, V and Remke, M and Watkins, DN and Wainwright, BJ and Taylor, MD and Mitchell, CA and Dyson, JM},
+  journal={Oncogene},
+  volume={36},
+  number={43},
+  pages={5969},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{jao2017role,
+  title={A role for Gle1, a regulator of DEAD-box RNA helicases, at centrosomes and basal bodies},
+  author={Jao, Li-En and Akef, Abdalla and Wente, Susan R},
+  journal={Molecular biology of the cell},
+  volume={28},
+  number={1},
+  pages={120--127},
+  year={2017},
+  publisher={Am Soc Cell Biol}
 }
